--- a/src/app/frontpage/frontpage.component.html
+++ b/src/app/frontpage/frontpage.component.html
@@ -1,1 +1,38 @@
-<p>frontpage works!</p>
+<section class="tausta">
+
+
+  <input type="text" placeholder="Search...">
+  <h2>Explore</h2>
+  <nav class="navbar">
+    <div class="row">
+      <ul class="column">
+      <li class="col-6 border btn btn-lg bg-light"><a routerLink="/items" routerLinkActive="active">Events</a></li>
+      <li class="col-6 border btn btn-lg bg-light"><a routerLink="/items" routerLinkActive="active"> Activities</a></li>
+      <li class="col-6 border btn btn-lg bg-light"> <a routerLink="/items" routerLinkActive="active">Places</a> </li>
+    </ul>
+    <ul class="column">
+      <li class="col-6 border btn btn-lg bg-light"><a routerLink="/items" routerLinkActive="active">Restaurant</a></li>
+      <li class="col-6 border btn btn-lg bg-light"><a routerLink="/items" routerLinkActive="active">Shops</a></li>
+      <li class="col-6 border btn btn-lg bg-light"><a routerLink="/items" routerLinkActive="active">Kids</a></li>
+    </ul>
+    </div>
+  </nav>
+
+  <div class="map">
+    <h2>Nearby</h2>
+    <div id="frame">
+      <a routerLink="/map" routerLinkActive="active"><img src="../../assets/helsinki.png" alt=""></a>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="trending">
+    <h2>Trending right now</h2>
+    <ul class="column">
+      <li class="col-3"><img src="../../assets/default_image.png" alt=""></li>
+      <li class="col-3"><img src="../../assets/default_image.png" alt=""></li>
+      <li class="col-3"><img src="../../assets/default_image.png" alt=""></li>
+    </ul>
+  </div>
+</section>
