--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,13 @@
-<p>navbar works!</p>
+<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+    <ul class="navbar-nav">
+        <li class="nav-item" id="weather">
+            <a class="btn btn-sm btn-outline-dark p-2" href="">Weather</a>
+        </li>
+        <li class="nav-item" id="logo">
+            <a class="nav-link navbar-brand"  routerLink="/frontpage" routerLinkActive="active"><img src="../../assets/logo2.png" alt=""></a>
+        </li>
+        <li class="nav-item" id="login">
+            <a class="btn btn-sm btn-outline-dark p-2" routerLink="/login" routerLinkaActive="active">Login</a>
+        </li>
+    </ul>
+</nav>
