add weather component

--- a/src/app/frontpage/frontpage.component.html
+++ b/src/app/frontpage/frontpage.component.html
@@ -1,6 +1,6 @@
 <section class="tausta">
 
-
+  <h2>TÄHÄN SÄÄ </h2>
   <input type="text" placeholder="Search...">
   <h2>Explore</h2>
   <nav class="navbar">
@@ -29,7 +29,7 @@
 
   <div class="trending">
     <h2>Trending right now</h2>
-    <ul class="column">
+    <ul class="column" id="trend">
       <li class="col-3"><img src="../../assets/default_image.png" alt=""></li>
       <li class="col-3"><img src="../../assets/default_image.png" alt=""></li>
       <li class="col-3"><img src="../../assets/default_image.png" alt=""></li>
