--- a/src/app/frontpage/frontpage.component.css
+++ b/src/app/frontpage/frontpage.component.css
@@ -1,7 +1,10 @@
 .tausta {
   padding-top: 160px;
   max-width: 90%;
-  margin: auto; /*
+  margin: auto;
+  /* background-color: #DBA993; */
+  justify-content: center;
+  align-items: center; /*
   background-image: url(../../assets/kallio.jpg);
   background-size: cover;
   background-repeat: no-repeat; */
@@ -74,8 +77,14 @@ hr {
   margin-left: 5%;
 }
 
+#trend {
+  margin: 0;
+  padding-bottom: 10px;
+}
+
 .col-3 {
   margin-left: 2%;
+  margin-bottom: 0;
 }
 
 .col-3 img {
