--- a/src/app/frontpage/frontpage.component.css
+++ b/src/app/frontpage/frontpage.component.css
@@ -10,6 +10,11 @@
   background-repeat: no-repeat; */
 }
 
+.search {
+  display: flex;
+  flex-direction: column;
+}
+
 nav {
   align-items: center;
   margin-left: 20%;
