Add base to HTML-file

--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -1,1 +1,34 @@
-<p>weather works!</p>
+<div class="mainWeatherDiv">
+    <div class="weatherDiv">
+        <h1>Kellonaika</h1>
+        <img src="#" alt="firstWeatherIcon">
+        <p>Lämpötila °C</p>
+        <p>Tuntuu kuin °C</p>
+        <p>Tuulen nopeus m/s</p>
+        <p>Sademäärä</p>
+    </div>
+    <div class="weatherDiv">
+        <h1>Kellonaika</h1>
+        <img src="#" alt="secondWeatherIcon">
+        <p>Lämpötila °C</p>
+        <p>Tuntuu kuin °C</p>
+        <p>Tuulen nopeus m/s</p>
+        <p>Sademäärä</p>
+    </div>
+    <div class="weatherDiv">
+        <h1>Kellonaika</h1>
+        <img src="#" alt="thirdhWeatherIcon">
+        <p>Lämpötila °C</p>
+        <p>Tuntuu kuin °C</p>
+        <p>Tuulen nopeus m/s</p>
+        <p>Sademäärä</p>
+    </div>
+    <div class="weatherDiv">
+        <h1>Kellonaika</h1>
+        <img src="#" alt="fourthtWeatherIcon">
+        <p>Lämpötila °C</p>
+        <p>Tuntuu kuin °C</p>
+        <p>Tuulen nopeus m/s</p>
+        <p>Sademäärä</p>
+    </div>
+</div>
