--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -1,7 +1,7 @@
 <div class="mainWeatherDiv">
     <div class="weatherDiv">
         <h1>Kellonaika</h1>
-        <img src="#" alt="firstWeatherIcon">
+        <p>Icon tähän</p>
         <p>Lämpötila °C</p>
         <p>Tuntuu kuin °C</p>
         <p>Tuulen nopeus m/s</p>
@@ -9,7 +9,7 @@
     </div>
     <div class="weatherDiv">
         <h1>Kellonaika</h1>
-        <img src="#" alt="secondWeatherIcon">
+        <p>Icon tähän</p>
         <p>Lämpötila °C</p>
         <p>Tuntuu kuin °C</p>
         <p>Tuulen nopeus m/s</p>
@@ -17,7 +17,7 @@
     </div>
     <div class="weatherDiv">
         <h1>Kellonaika</h1>
-        <img src="#" alt="thirdhWeatherIcon">
+        <p>Icon tähän</p>
         <p>Lämpötila °C</p>
         <p>Tuntuu kuin °C</p>
         <p>Tuulen nopeus m/s</p>
@@ -25,7 +25,7 @@
     </div>
     <div class="weatherDiv">
         <h1>Kellonaika</h1>
-        <img src="#" alt="fourthtWeatherIcon">
+        <p>Icon tähän</p>
         <p>Lämpötila °C</p>
         <p>Tuntuu kuin °C</p>
         <p>Tuulen nopeus m/s</p>
