Add fontawesome icons for wind and rainfall

--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -4,31 +4,31 @@
         <p>Icon tähän</p>
         <p>Lämpötila °C</p>
         <p>Tuntuu kuin °C</p>
-        <p>Tuulen nopeus m/s</p>
-        <p>Sademäärä</p>
+        <p> <i class="fas fa-wind"></i> m/s</p>
+        <p><i class="fas fa-tint"></i> mm</p>
     </div>
     <div class="weatherDiv">
         <h1>Kellonaika</h1>
         <p>Icon tähän</p>
         <p>Lämpötila °C</p>
         <p>Tuntuu kuin °C</p>
-        <p>Tuulen nopeus m/s</p>
-        <p>Sademäärä</p>
+        <p><i class="fas fa-wind"></i> m/s</p>
+        <p><i class="fas fa-tint"></i> mm</p>
     </div>
     <div class="weatherDiv">
         <h1>Kellonaika</h1>
         <p>Icon tähän</p>
         <p>Lämpötila °C</p>
         <p>Tuntuu kuin °C</p>
-        <p>Tuulen nopeus m/s</p>
-        <p>Sademäärä</p>
+        <p><i class="fas fa-wind"></i> m/s</p>
+        <p><i class="fas fa-tint"></i> mm</p>
     </div>
     <div class="weatherDiv">
         <h1>Kellonaika</h1>
         <p>Icon tähän</p>
         <p>Lämpötila °C</p>
         <p>Tuntuu kuin °C</p>
-        <p>Tuulen nopeus m/s</p>
-        <p>Sademäärä</p>
+        <p><i class="fas fa-wind"></i> m/s</p>
+        <p><i class="fas fa-tint"></i> mm</p>
     </div>
 </div>
