Get weather icons from API

--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -1,7 +1,7 @@
 <div class="mainWeatherDiv">
     <div class="weatherDiv">
         <h1>Kellonaika</h1>
-        <p>Icon tähän</p>
+        <img src="https://openweathermap.org/img/wn/{{Weatherdata.firstHourIcon}}@2x.png" alt="firstIcon">
         <p>Lämpötila °C</p>
         <p>Tuntuu kuin °C</p>
         <p> <i class="fas fa-wind"></i> m/s</p>
@@ -9,7 +9,7 @@
     </div>
     <div class="weatherDiv">
         <h1>Kellonaika</h1>
-        <p>Icon tähän</p>
+        <img src="https://openweathermap.org/img/wn/{{Weatherdata.secondHourIcon}}@2x.png" alt="secondIcon">
         <p>Lämpötila °C</p>
         <p>Tuntuu kuin °C</p>
         <p><i class="fas fa-wind"></i> m/s</p>
@@ -17,7 +17,7 @@
     </div>
     <div class="weatherDiv">
         <h1>Kellonaika</h1>
-        <p>Icon tähän</p>
+        <img src="https://openweathermap.org/img/wn/{{Weatherdata.thirdHourIcon}}@2x.png" alt="thirdIcon">
         <p>Lämpötila °C</p>
         <p>Tuntuu kuin °C</p>
         <p><i class="fas fa-wind"></i> m/s</p>
@@ -25,7 +25,7 @@
     </div>
     <div class="weatherDiv">
         <h1>Kellonaika</h1>
-        <p>Icon tähän</p>
+        <img src="https://openweathermap.org/img/wn/{{Weatherdata.fourthHourIcon}}@2x.png" alt="fourthIcon">
         <p>Lämpötila °C</p>
         <p>Tuntuu kuin °C</p>
         <p><i class="fas fa-wind"></i> m/s</p>
