--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -1,6 +1,6 @@
 <div class="mainWeatherDiv">
     <div class="weatherDiv">
-        <h1>Kellonaika</h1>
+        <h1>{{Weatherdata.firstHour_dt * 1000 | date: 'HH.mm'}}</h1>
         <img src="https://openweathermap.org/img/wn/{{Weatherdata.firstHourIcon}}@2x.png" alt="firstIcon">
         <p>Lämpötila °C</p>
         <p>Tuntuu kuin °C</p>
@@ -8,7 +8,7 @@
         <p><i class="fas fa-tint"></i> mm</p>
     </div>
     <div class="weatherDiv">
-        <h1>Kellonaika</h1>
+        <h1>{{Weatherdata.secondHour_dt * 1000 | date: 'HH.mm'}}</h1>
         <img src="https://openweathermap.org/img/wn/{{Weatherdata.secondHourIcon}}@2x.png" alt="secondIcon">
         <p>Lämpötila °C</p>
         <p>Tuntuu kuin °C</p>
@@ -16,7 +16,7 @@
         <p><i class="fas fa-tint"></i> mm</p>
     </div>
     <div class="weatherDiv">
-        <h1>Kellonaika</h1>
+        <h1>{{Weatherdata.thirdHour_dt * 1000 | date: 'HH.mm'}}</h1>
         <img src="https://openweathermap.org/img/wn/{{Weatherdata.thirdHourIcon}}@2x.png" alt="thirdIcon">
         <p>Lämpötila °C</p>
         <p>Tuntuu kuin °C</p>
@@ -24,7 +24,7 @@
         <p><i class="fas fa-tint"></i> mm</p>
     </div>
     <div class="weatherDiv">
-        <h1>Kellonaika</h1>
+        <h1>{{Weatherdata.fourthHour_dt * 1000 | date: 'HH.mm'}}</h1>
         <img src="https://openweathermap.org/img/wn/{{Weatherdata.fourthHourIcon}}@2x.png" alt="fourthIcon">
         <p>Lämpötila °C</p>
         <p>Tuntuu kuin °C</p>
