--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -2,32 +2,32 @@
     <div class="weatherDiv">
         <h1>{{Weatherdata.firstHour_dt * 1000 | date: 'HH.mm'}}</h1>
         <img src="https://openweathermap.org/img/wn/{{Weatherdata.firstHourIcon}}@2x.png" alt="firstIcon">
-        <p>Lämpötila °C</p>
-        <p>Tuntuu kuin °C</p>
+        <p>{{Weatherdata.firstHour_temp}}°C</p>
+        <p>Tuntuu kuin {{Weatherdata.firstHour_feelsLike}}°C</p>
         <p> <i class="fas fa-wind"></i> m/s</p>
         <p><i class="fas fa-tint"></i> mm</p>
     </div>
     <div class="weatherDiv">
         <h1>{{Weatherdata.secondHour_dt * 1000 | date: 'HH.mm'}}</h1>
         <img src="https://openweathermap.org/img/wn/{{Weatherdata.secondHourIcon}}@2x.png" alt="secondIcon">
-        <p>Lämpötila °C</p>
-        <p>Tuntuu kuin °C</p>
+        <p>{{Weatherdata.secondHour_temp}}°C</p>
+        <p>Tuntuu kuin {{Weatherdata.secondHour_feelsLike}}°C</p>
         <p><i class="fas fa-wind"></i> m/s</p>
         <p><i class="fas fa-tint"></i> mm</p>
     </div>
     <div class="weatherDiv">
         <h1>{{Weatherdata.thirdHour_dt * 1000 | date: 'HH.mm'}}</h1>
         <img src="https://openweathermap.org/img/wn/{{Weatherdata.thirdHourIcon}}@2x.png" alt="thirdIcon">
-        <p>Lämpötila °C</p>
-        <p>Tuntuu kuin °C</p>
+        <p>{{Weatherdata.thirdHour_temp}}°C</p>
+        <p>Tuntuu kuin {{Weatherdata.thirdHour_feelsLike}}°C</p>
         <p><i class="fas fa-wind"></i> m/s</p>
         <p><i class="fas fa-tint"></i> mm</p>
     </div>
     <div class="weatherDiv">
         <h1>{{Weatherdata.fourthHour_dt * 1000 | date: 'HH.mm'}}</h1>
         <img src="https://openweathermap.org/img/wn/{{Weatherdata.fourthHourIcon}}@2x.png" alt="fourthIcon">
-        <p>Lämpötila °C</p>
-        <p>Tuntuu kuin °C</p>
+        <p>{{Weatherdata.fourthHour_temp}}°C</p>
+        <p>Tuntuu kuin {{Weatherdata.fourthHour_feelsLike}}°C</p>
         <p><i class="fas fa-wind"></i> m/s</p>
         <p><i class="fas fa-tint"></i> mm</p>
     </div>
