--- a/src/app/weather/weather.component.css
+++ b/src/app/weather/weather.component.css
@@ -9,10 +9,19 @@
     border-radius: 10px;
     width: 200px;
     height: auto;
-    background: linear-gradient(#007fb1, #9ac9df);
+    background: linear-gradient(#08597e, #b2e0f5);
     color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 10px;
+    margin: 5px;
+    padding: 10px;
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 1rem;
+}
+
+.temperature {
+    font-size: 2rem;
+}
+
+.time {
+    font-size: 2rem;
+    font-weight: bold;
 }
