--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
     <ul class="navbar-nav">
         <li class="nav-item" id="weather">
-            <a class="btn btn-sm btn-outline-dark p-2" routerLink="/weather" routerLinkaActive="active">
+            <a class="btn btn-sm btn-outline-dark p-2" routerLink="/weather" routerLinkaActive="active"> Helsinki
                 <img class="weatherIcon" src="https://openweathermap.org/img/wn/{{CurrentWeatherdata.current_icon}}@2x.png" alt="icon">
                 {{CurrentWeatherdata.current_temp}}°C</a>
         </li>
