--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,7 +9,7 @@
             <a class="nav-link navbar-brand"  routerLink="/frontpage" routerLinkActive="active"><img src="../../assets/logo2.png" alt=""></a>
         </li>
         <li class="nav-item" id="login">
-            <a class="btn btn-sm btn-outline-dark p-2" routerLink="/login" routerLinkaActive="active">Login</a>
+            <a class="login btn btn-sm btn-outline-dark p-2" routerLink="/login" routerLinkaActive="active"><i class="fas fa-user"></i></a>
         </li>
     </ul>
 </nav>
