--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -1,10 +1,11 @@
+<h1 class="mainHeader">Sää Helsinki</h1>
 <div class="mainWeatherDiv">
     <div class="weatherDiv">
-        <h1 class="time">{{Weatherdata.firstHour_dt * 1000 | date: 'HH.mm'}}</h1>
-        <img src="https://openweathermap.org/img/wn/{{Weatherdata.firstHourIcon}}@2x.png" alt="firstIcon">
-        <p class ="temperature">{{Weatherdata.firstHour_temp}}°C</p>
-        <p>Tuntuu kuin {{Weatherdata.firstHour_feelsLike}}°C</p>
-        <p> <i class="fas fa-wind"></i> {{Weatherdata.firstHour_wind | number: '1.0-0'}} m/s</p>
+        <h1 class="time">{{Weatherdata.current_dt * 1000 | date: 'HH.mm'}}</h1>
+        <img src="https://openweathermap.org/img/wn/{{Weatherdata.currentIcon}}@2x.png" alt="firstIcon">
+        <p class ="temperature">{{Weatherdata.current_temp}}°C</p>
+        <p>Tuntuu kuin {{Weatherdata.current_feelsLike}}°C</p>
+        <p> <i class="fas fa-wind"></i> {{Weatherdata.current_wind | number: '1.0-0'}} m/s</p>
     </div>
     <div class="weatherDiv">
         <h1 class="time">{{Weatherdata.secondHour_dt * 1000 | date: 'HH.mm'}}</h1>
