--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -3,6 +3,10 @@
   display: flex;
   justify-content: center;
   background-color: #F8F9FA;
+
+  box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+  -webkit-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+  -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
 }
 
 i {
