--- a/src/app/frontpage/frontpage.component.css
+++ b/src/app/frontpage/frontpage.component.css
@@ -1,97 +1,198 @@
-.tausta {
-  padding-top: 160px;
-  max-width: 90%;
-  margin: auto;
-  /* background-color: #DBA993; */
-  justify-content: center;
-  align-items: center; /*
-  background-image: url(../../assets/kallio.jpg);
-  background-size: cover;
-  background-repeat: no-repeat; */
+.wrapper {
+  font-family: 'Open Sans', sans-serif;
 }
 
 .search {
-  display: flex;
-  flex-direction: column;
+  padding-bottom: 40px;
 }
 
-nav {
-  align-items: center;
-  margin-left: 20%;
-  padding-top: 0;
-}
-
-h2 {
-  margin-top: 40px;
-  margin-left: 21%;
-  margin-bottom: 0;
+h1 {
+  font-size: 2rem;
+  font-weight: 700;
+  text-align: center;
+  padding: 50px 0 30px;
 }
 
 input {
+  margin-bottom: 30px;
   width: 60%;
-  border-radius: .3rem;
+  border-radius: 0.3rem;
   border: 1px solid #dee2e6;
-  font-size: 1,25rem;
+  font-size: 1, 25rem;
   padding: 10px;
   margin-left: 21%;
+
+  box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+  -webkit-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+  -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
 }
 
-.row {
+h2 {
+  font-weight: 700;
+  margin-top: 40px;
+  margin-left: 21%;
+  margin-bottom: 0;
+  padding-bottom: 15px;
+}
+
+a {
+  color: #ffffff;
+  height: 80px;
+  font-size: 1.2rem;
+  text-align: start;
+  text-decoration: none;
+  border-radius: 5%;
+  padding: 10px;
+}
+
+.box {
+  width: 60%;
+  margin: auto;
+  padding-bottom: 20px;
+  border-radius: 10px;
+
+
+  /* box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+  -webkit-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+  -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58); */
+}
+
+.box1 {
+  background: rgb(144, 100, 211);
+  background: linear-gradient(
+    0deg,
+    rgba(144, 100, 211, 1) 0%,
+    rgba(255, 112, 169, 0.6834532374100719) 100%
+  );
+
+  box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+  -webkit-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+  -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+
+  width: 30%;
+  border-radius: 10px;
+}
+
+:hover.box1 {
+  background-color: #A366CC;
+}
+
+.box2 {
+  background: rgb(255, 220, 160);
+  background: linear-gradient(
+    185deg,
+    rgba(255, 220, 160, 1) 15%,
+    rgba(246, 108, 108, 0.8337349397590361) 83%
+  );
+
+  box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+  -webkit-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+  -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+
+  width: 30%;
+  border-radius: 10px;
+}
+
+:hover.box2 {
+  background-color: #F9907D;
+}
+
+.box3 {
+  background: rgb(93, 232, 148);
+  background: linear-gradient(
+    185deg,
+    rgba(93, 232, 148, 0.6746987951807228) 12%,
+    rgba(50, 229, 231, 1) 79%
+  );
+
+  box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+  -webkit-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+  -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+
+  width: 30%;
+  border-radius: 10px;
+}
+
+:hover.box3 {
+  background-color: rgb(93, 232, 148);
+}
+
+.nearby {
+  background-color: rgba(187, 247, 211, 0.675);
+}
+
+.nearby h2 {
+  padding-top: 20px;
+}
+
+.map {
+  width: 55%;
+  margin: auto;
+  padding-top: 15px;
+  padding-bottom: 40px;
+}
+
+img {
+  width: 100%;
+
+  box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+  -webkit-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+  -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+}
+
+#trend {
+  padding-bottom: 25px;
+}
+
+.column {
+  width: 60%;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
+  margin: auto;
+  margin-bottom: 50px;
 }
 
 ul {
   list-style: none;
   display: flex;
+  flex-direction: row;
 }
 
-li {
-  margin-left: 10px;
-  margin-right: 10px;
-  padding: 10px 10px;
+#trend-img {
+  border-radius: 10px;
 }
 
-a {
-  text-decoration: none;
-  color: black;
+
+
+@media only screen and (max-width: 601px) {
+
+.search {
+  padding: 30px 0 15px;
 }
 
-.map{
-  margin-left: 22%;
-  padding-top: 30px;
+.box, .trending {
+  width: 80%;
 }
 
-.map h2 {
-  margin-left: -1%;
-  padding-bottom: 5px;
+h1 {
+  display: none;
 }
 
-hr {
-  color: transparent;
+h2 {
+  margin-top: 0;
 }
 
-.trending{
-  margin-left: 17%;
-  padding-top: 30px;
-  margin-top: 10px;
+.box1, .box2, .box3 {
+  height: 150px;
 }
 
-.trending h2 {
-  margin-left: 5%;
+.map {
+  width: 85%;
+  padding-bottom: 70px;
 }
 
-#trend {
-  margin: 0;
-  padding-bottom: 10px;
+.map a {
+  padding: 0;
 }
 
-.col-3 {
-  margin-left: 2%;
-  margin-bottom: 0;
-}
-
-.col-3 img {
-  border: solid 2px lightgrey;
 }
