--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,12 +1,15 @@
-<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <ul class="navbar-nav">
-        <li class="nav-item" id="weather">
-            <a class="btn btn-sm btn-outline-dark p-2" routerLink="/weather" routerLinkActive="active"> Helsinki
+        <!-- <li class="nav-item" id="weather">
+            <a class="btn btn-sm btn-outline-dark p-2" routerLink="/weather" routerLinkActive="active">
                 <img class="weatherIcon" src="https://openweathermap.org/img/wn/{{CurrentWeatherdata.current_icon}}@2x.png" alt="icon">
                 {{CurrentWeatherdata.current_temp}}°C</a>
+        </li> -->
+        <li class="nav-item" id="weather">
+          <a class="nav-link" routerLink="/weather" routerLinkActive="active"><i class="fas fa-cloud-sun fa-2x"></i></a>
         </li>
         <li class="nav-item" id="logo">
-            <a class="nav-link navbar-brand"  routerLink="/frontpage" routerLinkActive="active"><img src="../../assets/logo2.png" alt=""></a>
+            <a class="nav-link navbar-brand"  routerLink="/frontpage" routerLinkActive="active"><img src="../../assets/SirkaLogotesti.png" alt=""></a>
         </li>
         <li class="nav-item" id="login">
             <a class="login btn btn-sm btn-outline-dark p-2" routerLink="/login" routerLinkActive="active"><i class="fas fa-user"></i></a>
