--- a/src/app/weather/weather.component.css
+++ b/src/app/weather/weather.component.css
@@ -1,21 +1,35 @@
+.mainHeader {
+    text-align: center;
+    padding-top: 40px;
+    font-size: 3rem;
+}
+
+.subtitle {
+    text-align: center;
+    font-size: 1.5rem;
+}
+
 .mainWeatherDiv {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 160px;
+    padding: 40px;
 }
 
 .weatherDiv {
     border-radius: 10px;
     width: 200px;
     height: auto;
-    background: linear-gradient(#08597e, #b2e0f5);
+    background: linear-gradient(185deg, rgba(93,232,148,0.6746987951807228) 12%, rgba(50,229,231,1) 79%);
     color: white;
     margin: 5px;
     padding: 10px;
     text-align: center;
     font-size: 1rem;
+    box-shadow: 9px 8px 42px -14px rgba(0,0,0,0.58);
+    -webkit-box-shadow: 9px 8px 42px -14px rgba(0,0,0,0.58);
+    -moz-box-shadow: 9px 8px 42px -14px rgba(0,0,0,0.58)
 }
 
 .temperature {
@@ -25,4 +39,8 @@
 .time {
     font-size: 2rem;
     font-weight: bold;
+}
+
+.sunRiseSunSet {
+    text-align: center;
 }
