--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -1,31 +1,37 @@
-<h1 class="mainHeader">Sää Helsinki</h1>
+<h1 class="mainHeader">Sää tänään</h1>
+<h2 class="subtitle">Helsinki</h2>
 <div class="mainWeatherDiv">
     <div class="weatherDiv">
         <h1 class="time">{{Weatherdata.current_dt * 1000 | date: 'HH.mm'}}</h1>
         <img src="https://openweathermap.org/img/wn/{{Weatherdata.currentIcon}}@2x.png" alt="firstIcon">
-        <p class ="temperature">{{Weatherdata.current_temp}}°C</p>
+        <p class="temperature">{{Weatherdata.current_temp}}°C</p>
         <p>Tuntuu kuin {{Weatherdata.current_feelsLike}}°C</p>
         <p> <i class="fas fa-wind"></i> {{Weatherdata.current_wind | number: '1.0-0'}} m/s</p>
     </div>
     <div class="weatherDiv">
         <h1 class="time">{{Weatherdata.secondHour_dt * 1000 | date: 'HH.mm'}}</h1>
         <img src="https://openweathermap.org/img/wn/{{Weatherdata.secondHourIcon}}@2x.png" alt="secondIcon">
-        <p class ="temperature">{{Weatherdata.secondHour_temp}}°C</p>
+        <p class="temperature">{{Weatherdata.secondHour_temp}}°C</p>
         <p>Tuntuu kuin {{Weatherdata.secondHour_feelsLike}}°C</p>
         <p><i class="fas fa-wind"></i> {{Weatherdata.secondHour_wind | number: '1.0-0'}} m/s</p>
     </div>
     <div class="weatherDiv">
         <h1 class="time">{{Weatherdata.thirdHour_dt * 1000 | date: 'HH.mm'}}</h1>
         <img src="https://openweathermap.org/img/wn/{{Weatherdata.thirdHourIcon}}@2x.png" alt="thirdIcon">
-        <p class ="temperature">{{Weatherdata.thirdHour_temp}}°C</p>
+        <p class="temperature">{{Weatherdata.thirdHour_temp}}°C</p>
         <p>Tuntuu kuin {{Weatherdata.thirdHour_feelsLike}}°C</p>
         <p><i class="fas fa-wind"></i> {{Weatherdata.thirdHour_wind | number: '1.0-0'}} m/s</p>
     </div>
     <div class="weatherDiv">
         <h1 class="time">{{Weatherdata.fourthHour_dt * 1000 | date: 'HH.mm'}}</h1>
         <img src="https://openweathermap.org/img/wn/{{Weatherdata.fourthHourIcon}}@2x.png" alt="fourthIcon">
-        <p class ="temperature">{{Weatherdata.fourthHour_temp}}°C</p>
+        <p class="temperature">{{Weatherdata.fourthHour_temp}}°C</p>
         <p>Tuntuu kuin {{Weatherdata.fourthHour_feelsLike}}°C</p>
         <p><i class="fas fa-wind"></i> {{Weatherdata.fourthHour_wind | number: '1.0-0'}} m/s</p>
     </div>
+
+</div>
+<div class="sunRiseSunSet">
+    <p>Aurinko nousee</p>
+    <p>Aurinko laskee</p>
 </div>
