Add sunrise and sunset times

--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -9,8 +9,8 @@
         </div>
         <img src="https://openweathermap.org/img/wn/{{Weatherdata.currentIcon}}@2x.png" alt="firstIcon" class="item4">
         <div class="item5">
-            <p>Aurinko nousee<br>7.00</p>
-            <p>Aurinko laskee <br>21.00</p>
+            <p>Aurinko nousee<br>{{Weatherdata.sunrise_time}}</p>
+            <p>Aurinko laskee <br>{{Weatherdata.sunset_time}}</p>
         </div>
     </div>
 </div>
