--- a/src/app/weather/weather.component.css
+++ b/src/app/weather/weather.component.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     flex-wrap: nowrap;
     align-items: center;
-    margin-top: 10px;
+    margin-top: 30px;
 }
 
 .weatherNow {
@@ -57,8 +57,8 @@
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: center;
-    margin: 10px;
-  
+    margin-bottom: 30px;
+    margin-top: 5px;
 }
 
 .weatherDiv {
