--- a/src/app/weather/weather.component.css
+++ b/src/app/weather/weather.component.css
@@ -88,3 +88,15 @@
 .sunRiseSunSet {
     text-align: center;
 }
+
+@media only screen and (max-width: 600px) {
+    .weatherNow {
+        display: grid;
+        grid-template-columns: auto auto auto;
+        width: 98%;
+  }
+
+  .weatherDiv {
+      padding: 5px;
+  }
+}
