--- a/src/app/frontpage/frontpage.component.css
+++ b/src/app/frontpage/frontpage.component.css
@@ -2,10 +2,6 @@
   font-family: 'Open Sans', sans-serif;
 }
 
-.search {
-  padding-bottom: 40px;
-}
-
 h1 {
   font-size: 2rem;
   font-weight: 700;
@@ -13,8 +9,8 @@ h1 {
   padding: 50px 0 30px;
 }
 
-input {
-  margin-bottom: 30px;
+.input-group-append{
+  margin-bottom: 50px;
   width: 60%;
   border-radius: 0.3rem;
   border: 1px solid #dee2e6;
@@ -29,10 +25,15 @@ input {
 
 h2 {
   font-weight: 700;
-  margin-top: 40px;
-  margin-left: 21%;
+  margin-top: 20px;
+  text-align: center;
+    /* margin-left: 20%; */
   margin-bottom: 0;
   padding-bottom: 15px;
+}
+
+span {
+  padding-right: 10px;
 }
 
 a {
@@ -126,10 +127,14 @@ a {
 }
 
 .map {
-  width: 55%;
+  width: 85%;
   margin: auto;
   padding-top: 15px;
   padding-bottom: 40px;
+}
+
+.map a {
+  padding: 0;
 }
 
 img {
@@ -163,23 +168,38 @@ ul {
 }
 
 
-
 @media only screen and (max-width: 601px) {
 
 .search {
-  padding: 30px 0 15px;
+  margin-top: 40px;
+}
+
+.input-group-append {
+  width: 80%;
+  margin-left: 10%;
+}
+
+#explore {
+  display: none;
 }
 
 .box, .trending {
-  width: 80%;
+  width: 90%;
 }
 
-h1 {
+ h1 {
+  padding-top: 5px;
+  font-size: 1rem;
+}
+
+span {
   display: none;
 }
 
 h2 {
   margin-top: 0;
+  margin-left: 5%;
+  font-size: 1.5rem;
 }
 
 .box1, .box2, .box3 {
@@ -188,11 +208,43 @@ h2 {
 
 .map {
   width: 85%;
-  padding-bottom: 70px;
+  padding-bottom: 50px;
 }
 
 .map a {
   padding: 0;
 }
 
+#trend {
+  padding-top: 10px;
+}
+
+.trending i {
+  display: none;
+}
+
+.column {
+  width: 100%;
+}
+
+}
+
+@media only screen and (max-width: 376px) {
+
+  .input-group-append {
+    margin-bottom: 20px;
+  }
+
+  .navbar {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .box1, .box2, .box3 {
+    height: 40px;
+    width: 100%;
+    text-align: center;
+    margin: 5px 0;
+    padding: 5px;
+  }
 }
