--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
     <ul class="navbar-nav">
         <!-- <li class="nav-item" id="weather">
             <a class="btn btn-sm btn-outline-dark p-2" routerLink="/weather" routerLinkActive="active">
