--- a/src/app/places/places.component.html
+++ b/src/app/places/places.component.html
@@ -1,1 +1,10 @@
-<p>places works!</p>
+<div *ngFor="let place of places.slice(0,7)">
+  <h2>{{place.name.fi}}</h2>
+  <p>
+    {{place.description.body}}
+  </p>
+  <p>{{place.location.address.street_address}}</p>
+  <p>{{place.location.lat}}</p>
+  <p>{{place.location.lon}}</p>
+
+</div>
