Add Google maps component

--- a/src/app/frontpage/frontpage.component.html
+++ b/src/app/frontpage/frontpage.component.html
@@ -33,11 +33,12 @@
 
   <section class="nearby">
     <h2><span><i class="far fa-compass"></i></span>Nearby</h2>
-    <div class="map">
+    <!--div class="map">
       <a routerLink="/map" routerLinkActive="active"
         ><img src="../../assets/helsinki.png" alt=""
       /></a>
-    </div>
+    </div-->
+    <app-map></app-map>
   </section>
 
 
