Add map to frontpage and items component

--- a/src/app/frontpage/frontpage.component.html
+++ b/src/app/frontpage/frontpage.component.html
@@ -33,12 +33,12 @@
 
   <section class="nearby">
     <h2><span><i class="far fa-compass"></i></span>Nearby</h2>
-    <!--div class="map">
-      <a routerLink="/map" routerLinkActive="active"
+    <div class="map">
+      <!--a routerLink="/map" routerLinkActive="active"
         ><img src="../../assets/helsinki.png" alt=""
-      /></a>
-    </div-->
-    <app-map></app-map>
+      /></a-->
+      <app-map></app-map>
+      </div>
   </section>
 
 
