--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -15,9 +15,10 @@
   <section class="nearby">
     <h2><span><i class="far fa-compass"></i></span>Nearby</h2>
     <div class="map">
-      <a routerLink="/map" routerLinkActive="active"
+      <app-map></app-map>
+      <!--a routerLink="/map" routerLinkActive="active"
         ><img src="../../assets/helsinki.png" alt=""
-      /></a>
+      /></a-->
     </div>
   </section>
 
