--- a/src/app/user-login/reset-password/reset-password.component.html
+++ b/src/app/user-login/reset-password/reset-password.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-4 offset-md-3 mt-4">
-        <h3>Reset Password</h3>
         <form>
+          <h3>Reset Password</h3>
             <div class="form-group">
                 <label for="resetPasswordEmail">Account Email</label>
                 <input type="email"
@@ -10,7 +10,7 @@
                        id="resetPasswordEmail"
                        placeholder="Enter email">
             </div>
-            <button type="submit" class="btn btn-primary">Reset Password <i class="fas fa-paper-plane"></i></button>
+            <button type="submit" class="btn btn-outline">Reset Password <i class="fas fa-paper-plane"></i></button>
         </form>
     </div>
   </div>
