--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,70 +1,39 @@
 nav {
-  padding: 0;
+  padding: 20 0;
+
   box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.30);
   -webkit-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.30);
   -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.30);
+}
+
+#logo {
+  margin-left: 5%;
 }
 
 .navbar-nav {
   display: flex;
   flex-direction: row;
   padding: 0px 0 0;
-  justify-content: space-evenly;
   text-transform: uppercase;
   align-items: center;
-  margin: 0;
+  margin-right: 5%;
 }
 
-.navbar > * {
-  flex-grow: 1;
-  text-align: center;
-}
-
-ul {
-  padding: 0;
-}
-
-.btn.btn-sm.btn-outline-dark.p-2 {
-  display: flex;
-  height: 50px;
-  background-color: #A4D5EB;
-  border: none;
-  color: white;
-  margin-bottom: 20px;
-  align-items: center;
-  justify-content: center;
-}
-
-.login.btn.btn-sm.btn-outline-dark.p-2 {
-  border-radius: 40%;
-  height: auto;
-  width: auto;
-  font-size: 2rem;
-  color:#A4D5EB;
-  margin-bottom: 0;
-
-  background: none;
-}
-.navbar.fixed-top.navbar-expand-lg.navbar-light.bg-light{
-  position:relative;
-}
-
-:hover.btn.btn-sm.btn-outline-dark.p-2 {
-  background-color: #3B81A1;
-}
-
-:hover.login.btn.btn-sm.btn-outline-dark.p-2{
-  color: #3B81A1;
-  background: none;
-}
-
-.weatherIcon {
-  height: 40px;
+li {
+  margin-right: 10%;
 }
 
 i {
   color: black;
 }
+
+i:hover {
+  color: rgba(59, 56, 56, 0.3);
+}
+
+/* .weatherIcon {
+  height: 40px;
+} */
 
 @media only screen and (max-width: 601px) {
 
