--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,18 +1,20 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-    <ul class="navbar-nav">
-        <!-- <li class="nav-item" id="weather">
-            <a class="btn btn-sm btn-outline-dark p-2" routerLink="/weather" routerLinkActive="active">
-                <img class="weatherIcon" src="https://openweathermap.org/img/wn/{{CurrentWeatherdata.current_icon}}@2x.png" alt="icon">
-                {{CurrentWeatherdata.current_temp}}°C</a>
-        </li> -->
-        <li class="nav-item" id="weather">
-          <a class="nav-link" routerLink="/weather" routerLinkActive="active"><i class="fas fa-cloud-sun fa-2x"></i></a>
-        </li>
-        <li class="nav-item" id="logo">
-            <a class="nav-link navbar-brand"  routerLink="/frontpage" routerLinkActive="active"><img src="../../assets/SirkaLogotesti.png" alt=""></a>
-        </li>
-        <li class="nav-item" id="login">
-            <a class="login btn btn-sm btn-outline-dark p-2" routerLink="/login" routerLinkActive="active"><i class="fas fa-user"></i></a>
-        </li>
-    </ul>
+  <div class="container-fluid">
+    <div id="logo">
+      <a class="nav-link navbar-brand"  routerLink="/frontpage" routerLinkActive="active"><img src="../../assets/SirkaLogotesti.png" alt=""></a>
+    </div>
+      <ul class="navbar-nav">
+          <!-- <li class="nav-item" id="weather">
+              <a class="btn btn-sm btn-outline-dark p-2" routerLink="/weather" routerLinkActive="active">
+                  <img class="weatherIcon" src="https://openweathermap.org/img/wn/{{CurrentWeatherdata.current_icon}}@2x.png" alt="icon">
+                  {{CurrentWeatherdata.current_temp}}°C</a>
+          </li> -->
+          <li class="nav-item" id="weather">
+            <a class="nav-link" routerLink="/weather" routerLinkActive="active"><i class="fas fa-cloud-sun fa-2x"></i></a>
+          </li>
+          <li class="nav-item" id="login">
+              <a class="nav-link" routerLink="/login" routerLinkActive="active"><i class="fas fa-user fa-2x"></i></a>
+          </li>
+      </ul>
+  </div>
 </nav>
