--- a/src/app/user-login/login/login.component.html
+++ b/src/app/user-login/login/login.component.html
@@ -1,23 +1,40 @@
 <div class="row">
-    <div class="col-md-4 offset-md-3 mt-4">
-<form>
-    <div class="form-group">
+  <div class="col-md-4 offset-md-3 mt-4">
+    <form>
+      <div class="form-group">
         <h3>Login</h3>
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-    </div>
-    <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-    </div>
-    <div class="d-grid gap-2 col-6 mx-auto">
-    <button type="submit" class="btn btn-primary">Login <i class="fas fa-sign-in-alt"></i></button>
+        <label for="exampleInputEmail1">Email address</label>
+        <input
+          type="email"
+          class="form-control"
+          id="exampleInputEmail1"
+          aria-describedby="emailHelp"
+          placeholder="Enter email"
+        />
+        <small id="emailHelp" class="form-text text-muted"
+          >We'll never share your email with anyone else.</small
+        >
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input
+          type="password"
+          class="form-control"
+          id="exampleInputPassword1"
+          placeholder="Password"
+        />
+      </div>
+      <div class="d-grid gap-2 col-6 mx-auto">
+        <button type="submit" class="btn btn-outline">
+          Login <i class="fas fa-sign-in-alt"></i>
+        </button>
+      </div>
+      <a class="nav-link" routerLink="/register" routerLinkActive="active"
+        >Don't have an account? Sign up here
+      </a>
+      <a class="nav-link" routerLink="/reset-password" routerLinkActive="active"
+        >Forgot password?
+      </a>
+    </form>
   </div>
-    <a class="nav-link"
-    routerLink="/register" routerLinkActive="active">Don't have an account? Sign up here </a> 
-    <a class="nav-link"
-    routerLink="/reset-password" routerLinkActive="active">Forgot password? </a> 
-  </form>
-</div>
 </div>
