--- a/src/app/user-login/register/register.component.html
+++ b/src/app/user-login/register/register.component.html
@@ -1,7 +1,9 @@
 <div class="row">
     <div class="col-md-4 offset-md-3 mt-4">
-        <h3>Register new user</h3>
         <form>
+          <h3>Register new user</h3>
+                <label for="registerName">Name</label>
+                <input type="name" class="form-control" id="registerName" placeholder="Your Name">
                 <label for="registerEmail">Email</label>
                 <input type="email"
                        class="form-control"
@@ -15,7 +17,7 @@
                        placeholder="Password">
             </div>
             <button type="submit"
-                    class="btn btn-primary">Register <i class="fas fa-sign-in-alt"></i></button>
+                    class="btn btn-outline">Register <i class="fas fa-sign-in-alt"></i></button>
         </form>
     </div>
   </div>
