change component hierarchy

--- a/src/app/frontpage/frontpage.component.html
+++ b/src/app/frontpage/frontpage.component.html
@@ -9,10 +9,10 @@
   <h2 id="explore"><span><i class="far fa-lightbulb"></i></span>Explore</h2>
   <div class="box">
     <nav class="navbar">
-      <a class="box1" routerLink="/items" routerLinkActive="active">Events</a>
-      <a class="box2" routerLink="/items" routerLinkActive="active"
+      <a class="box1" routerLink="/categories" routerLinkActive="active">Events</a>
+      <a class="box2" routerLink="/categories" routerLinkActive="active"
         >Activities</a>
-      <a class="box3" routerLink="/items" routerLinkActive="active">Places</a>
+      <a class="box3" routerLink="/categories" routerLinkActive="active">Places</a>
     </nav>
   </div>
 
