add ReactiveFormsModule and fix api endpoints

--- a/src/app/user-login/login/login.component.html
+++ b/src/app/user-login/login/login.component.html
@@ -1,40 +1,25 @@
 <div class="row">
   <div class="col-md-4 offset-md-3 mt-4">
-    <form>
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
-        <h3>Login</h3>
-        <label for="exampleInputEmail1">Email address</label>
-        <input
-          type="email"
-          class="form-control"
-          id="exampleInputEmail1"
-          aria-describedby="emailHelp"
-          placeholder="Enter email"
-        />
-        <small id="emailHelp" class="form-text text-muted"
-          >We'll never share your email with anyone else.</small
-        >
+          <label for="username">Username</label>
+          <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
+          <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+              <div *ngIf="f.username.errors.required">Username is required</div>
+          </div>
       </div>
       <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input
-          type="password"
-          class="form-control"
-          id="exampleInputPassword1"
-          placeholder="Password"
-        />
+          <label for="password">Password</label>
+          <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+          <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+              <div *ngIf="f.password.errors.required">Password is required</div>
+          </div>
       </div>
-      <div class="d-grid gap-2 col-6 mx-auto">
-        <button type="submit" class="btn btn-outline">
-          Login <i class="fas fa-sign-in-alt"></i>
-        </button>
-      </div>
-      <a class="nav-link" routerLink="/register" routerLinkActive="active"
-        >Don't have an account? Sign up here
-      </a>
-      <a class="nav-link" routerLink="/reset-password" routerLinkActive="active"
-        >Forgot password?
-      </a>
-    </form>
+      <button [disabled]="loading" class="btn btn-primary">
+          <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+          Login
+      </button>
+      <div *ngIf="error" class="alert alert-danger mt-3 mb-0">{{error}}</div>
+  </form>
   </div>
 </div>
