--- a/src/app/categories/activities/activities.component.html
+++ b/src/app/categories/activities/activities.component.html
@@ -1,13 +1,51 @@
-<h1>Activities </h1>
-<div *ngFor="let activity of activities.slice(0,7)">
-  <h2>{{activity.name.fi}}</h2>
-  <p>
-    {{activity.description.body}}
-  </p>
-  <p>{{activity.location.address.street_address}}</p>
-  <p>{{activity.location.lat}}</p>
-  <p>{{activity.location.lon}}</p>
+<section class="wrapper">
+  <div class="input-group-append">
+    <input type="search" class="form-control" placeholder="Etsi sivustolta.."/>
+    <button class="btn btn-sm btn-light" type="button"><i class="fas fa-search"></i></button>
+  </div>
+  <h1>Aktiviteetit</h1>
 
-</div>
+  <h2>Kategoriat</h2>
+  <nav class="navbar">
+    <a id="music">Nähtävyydet<br />& Retket</a>
+    <a>Luonto<br />& Urheilu</a>
+    <a>Sauna<br />& Hyvinvointi</a>
+    <a>Museot<br />& Galleriat</a>
+  </nav>
 
+  <section class="nearby">
+    <h2>
+      <span><i class="far fa-compass"></i></span>Nearby
+    </h2>
+    <div class="map">
+      <app-map></app-map>
+      <!--a routerLink="/map" routerLinkActive="active"
+        ><img src="../../assets/helsinki.png" alt=""
+      /></a-->
+    </div>
+  </section>
 
+  <div class="list">
+    <h2>
+      <span><i class="far fa-calendar-alt"></i></span>All events
+    </h2>
+    <input
+      type="date"
+      id="calendar"
+      name="calendar"
+      value="Pick a date"
+      min="2021-01-04"
+      max="2022-31-12"
+    />
+
+    <div *ngFor="let activity of activities.slice(0, 7)">
+      <h2>{{ activity.name.fi }}</h2>
+      <p>
+        {{ activity.description.body }}
+      </p>
+      <p>{{ activity.location.address.street_address }}</p>
+      <!-- <p>{{ activity.location.lat }}</p>
+      <p>{{ activity.location.lon }}</p> -->
+    </div>
+  </div>
+</section>
