--- a/src/app/categories/categories.component.css
+++ b/src/app/categories/categories.component.css
@@ -16,20 +16,23 @@ span {
   padding-right: 10px;
 }
 
-/* search-input */
-.input-group-append{
-  margin-top: 50px;
-  margin-bottom: 50px;
-  width: 60%;
-  border-radius: 0.3rem;
-  border: 1px solid #dee2e6;
-  font-size: 1, 25rem;
-  padding: 10px;
-  margin-left: 21%;
+.input-group-append {
+  margin-bottom: 25px;
+}
+
+input[type=search] {
+  width: 15%;
+  -webkit-transition: width 0.4s ease-in-out;
+  transition: width 0.4s ease-in-out;
 
   box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
   -webkit-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
   -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
+}
+
+/* When the input field gets focus, change its width to 100% */
+input[type=search]:focus {
+  width: 60%;
 }
 
 /* categories navbar */
