--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -1,19 +1,19 @@
 <section class="wrapper">
   <div class="input-group-append">
-    <input type="search" class="form-control" placeholder="Search the site.."/>
+    <input type="search" class="form-control" placeholder="Etsi sivustolta.."/>
     <button class="btn btn-sm btn-light" type="button"><i class="fas fa-search"></i></button>
   </div>
 
-  <h2><span><i class="fas fa-filter"></i></span>Categories</h2>
+  <h2><span><i class="fas fa-filter"></i></span>Kategoriat</h2>
   <nav class="navbar">
-    <a id="music">Music</a>
-    <a>Culture</a>
-    <a>Sport</a>
-    <a>Kids</a>
+    <a id="music">Musiikki</a>
+    <a>Kulttuuri</a>
+    <a>Urheilu</a>
+    <a>Lapset</a>
   </nav>
 
   <section class="nearby">
-    <h2><span><i class="far fa-compass"></i></span>Nearby</h2>
+    <h2>Lähistöllä</h2>
     <div class="map">
       <app-map></app-map>
       <!--a routerLink="/map" routerLinkActive="active"
@@ -23,7 +23,7 @@
   </section>
 
   <div class="list">
-    <h2><span><i class="far fa-calendar-alt"></i></span>All events</h2>
+    <h2>Kaikki tapahtumat</h2>
     <input type="date" id="calendar" name="calendar" value="Pick a date"
     min="2021-01-04" max="2022-31-12">
     <p>Tähän listaus eventeistä kyseisenä päivänä</p>
