--- a/src/app/categories/places/places.component.html
+++ b/src/app/categories/places/places.component.html
@@ -1,11 +1,41 @@
-<h1>Places</h1>
-<div *ngFor="let place of places.slice(0,7)">
-  <h2>{{place.name.fi}}</h2>
-  <p>
-    {{place.description.body}}
-  </p>
-  <p>{{place.location.address.street_address}}</p>
-  <p>{{place.location.lat}}</p>
-  <p>{{place.location.lon}}</p>
+<section class="wrapper">
+  <div class="input-group-append">
+    <input type="search" class="form-control" placeholder="Etsi sivustolta.."/>
+    <button class="btn btn-sm btn-light" type="button"><i class="fas fa-search"></i></button>
+  </div>
+  <h1>Paikat</h1>
 
-</div>
+  <h2>Kategoriat</h2>
+  <nav class="navbar">
+    <a id="music">Ravintolat</a>
+    <a>Liikkeet</a>
+    <a>Majoitus</a>
+    <a>Tilat<br>& Tapahtumapaikat</a>
+  </nav>
+
+  <section class="nearby">
+    <h2><span><i class="far fa-compass"></i></span>Lähistöllä</h2>
+    <div class="map">
+      <app-map></app-map>
+      <!--a routerLink="/map" routerLinkActive="active"
+        ><img src="../../assets/helsinki.png" alt=""
+      /></a-->
+    </div>
+  </section>
+
+  <div class="list">
+    <h2>Kaikki paikat</h2>
+    <input type="date" id="calendar" name="calendar" value="Pick a date"
+    min="2021-01-04" max="2022-31-12">
+    <div *ngFor="let place of places.slice(0,7)">
+      <h2>{{place.name.fi}}</h2>
+      <p>
+        {{place.description.body}}
+      </p>
+      <p>{{place.location.address.street_address}}</p>
+      <!-- <p>{{place.location.lat}}</p>
+      <p>{{place.location.lon}}</p> -->
+
+    </div>
+  </div>
+</section>
