--- a/src/app/frontpage/frontpage.component.html
+++ b/src/app/frontpage/frontpage.component.html
@@ -1,21 +1,24 @@
 <section class="wrapper">
-  <div class="search">
-    <h1>Welcome to your personal Helsinki city guide!</h1>
-    <div class="input-group-append">
-      <input type="search" class="form-control" placeholder="Search the site.."/>
-      <button class="btn btn-sm btn-light" type="button"><i class="fas fa-search"></i></button>
-    </div>
-    </div>
-  <h2 id="explore"><span><i class="far fa-lightbulb"></i></span>Explore</h2>
-  <div class="box">
-    <nav class="navbar">
-      <a class="box1" routerLink="/categories" routerLinkActive="active">Events</a>
-      <a class="box2" routerLink="/categories" routerLinkActive="active"
-        >Activities</a>
-      <a class="box3" routerLink="/categories" routerLinkActive="active">Places</a>
-    </nav>
-  </div>
 
+  <section class="top">
+    <div class="row">
+      <div class="col-lg-6">
+        <!-- <div class="input-group-append">
+          <input type="search" class="form-control" placeholder="Etsi sivustolta.."/>
+          <button class="btn btn-sm btn-light" type="button"><i class="fas fa-search"></i></button>
+        </div> -->
+          <h1>Henkilökohtainen<br> kaupunkioppaasi<br> Helsingissä!</h1>
+      </div>
+      <div class="col-lg-6">
+        <div class="box">
+            <a class="box1" routerLink="/categories/events" routerLinkActive="active">Tapahtumat<p>Tapahtumat</p></a>
+            <a class="box2" routerLink="/categories/activities" routerLinkActive="active"
+              >Aktiviteetit<p>Aktiviteetit</p></a>
+            <a class="box3" routerLink="/categories/places" routerLinkActive="active">Paikat<p>Paikat</p></a>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
   <!-- <div class="row">
@@ -34,22 +37,20 @@
   </div> -->
 
   <section class="nearby">
-    <h2><span><i class="far fa-compass"></i></span>Nearby</h2>
+    <h2>Tutki ympäristöäsi kartan avulla</h2>
     <div class="map">
-      <!--a routerLink="/map" routerLinkActive="active"
-        ><img src="../../assets/helsinki.png" alt=""
-      /></a-->
+      <!-- <a routerLink="/map" routerLinkActive="active"></a> -->
       <app-map></app-map>
       </div>
   </section>
 
 
-  <div class="trending">
-    <h2 id="trend"><span><i class="fas fa-chart-line"></i></span>Trending</h2>
+  <section class="trending">
+    <h2 id="trend"><span><i class="fas fa-chart-line"></i></span>Suosituimmat</h2>
     <ul class="column">
       <li class="col-4"><img id="trend-img" src="../../assets/default_image.png" alt="" /><figcaption></figcaption></li>
       <li class="col-4"><img id="trend-img" src="../../assets/default_image.png" alt="" /><figcaption></figcaption></li>
       <li class="col-4"><img id="trend-img" src="../../assets/default_image.png" alt="" /><figcaption></figcaption></li>
     </ul>
-  </div>
+  </section>
 </section>
